--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>BMI Tracker (kg)</title>
+  <title>BMI Tracker</title>
   
   <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="apple-touch-icon" href="/pple-touch-icon.png>">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png>">
   <link rel="apple-touch-startup-image" href="/apple-touch-icon.png">
   <link rel="shortcut icon" href="/favicon.ico">
   <!-- iOS web app meta -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Sleep Tracker">
+  <meta name="apple-mobile-web-app-title" content="BMI Tracker">
 
   <link rel="mask-icon" href="/icons/favicon.svg" color="#5bbad5">
   <!-- Make page scale properly on mobile -->
